--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.0",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/tailwind": "^5.1.0",
+    "@iconify-json/ant-design": "^1.1.16",
+    "@iconify-json/mdi": "^1.1.66",
+    "astro": "^4.7.0",
+    "astro-icon": "^1.1.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
